--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "devDependencies": {
         "@eslint/compat": "^1.1.1",
         "@eslint/js": "^9.7.0",
+        "@trivago/prettier-plugin-sort-imports": "^4.3.0",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@typescript-eslint/eslint-plugin": "^7.13.1",
@@ -36,7 +37,7 @@
         "eslint-plugin-react-hooks": "^4.6.2",
         "eslint-plugin-react-refresh": "^0.4.7",
         "globals": "^15.8.0",
-        "prettier": "^3.3.2",
+        "prettier": "^3.3.3",
         "prettier-plugin-tailwindcss": "^0.6.5",
         "tailwindcss": "^3.4.4",
         "typescript": "^5.2.2",
